CSCFAIRMETA-775: [ADD|REF]  - moved identifiers_to_ids function to common_service to be used also with datasets_view  - tests  - swagger update
