# swagger/v2/swagger.yaml
@@ -1176,6 +1176,18 @@ paths:
           required: true
           schema:
             $ref: '#/definitions/StringList'
+        - $ref: "#/parameters/fields"
+      responses:
+        "200":
+          description: Successful operation, returns a list of queried datasets.
+        "400":
+          description: Received empty list of identifiers
+        '403':
+          description: Forbidden. Must have permission for resource
+        '404':
+          description: Not found
+      tags:
+        - Dataset API
   /rest/v2/datasets/{PID}:
     get:
       summary: Get dataset metadata.
